--- a/index.html
+++ b/index.html
@@ -586,21 +586,16 @@ body{
       </div>
     </footer>    
     <br>
-    <!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Live Streaming Background Music</title>
-<style>
+
 /* Modern audio player styles */
 #audioContainer {
   position: fixed;
   bottom: 0;
-  left: 0;
-  width: 100%;
+  right: 0;
+  width: 50%;
+  max-width: 300px; /* Limiting the max width to ensure it doesn't take up too much space */
   background-color: #f2f2f2;
-  border-radius: 10px;
+  border-radius: 10px 0 0 10px;
   padding: 20px;
   box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.1);
   z-index: 9999; /* Ensures the audio controls appear above other content */
@@ -633,13 +628,22 @@ body{
 #audioPlayer audio::-webkit-media-controls-time-remaining-display {
   color: #333;
 }
+
+#closeButton {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+  color: #333;
+}
 </style>
 </head>
 <body>
 <div id="audioContainer">
+  <span id="closeButton">&times;</span>
   <div id="audioPlayer">
     <audio id="backgroundMusic" controls autoplay loop>
-      <source src="https://stream.zeno.fm/aphjprpoohptv" type="audio/mpeg">
+      <source src="your-audio-stream-url" type="audio/mpeg">
       Your browser does not support the audio element.
     </audio>
   </div>
@@ -647,8 +651,15 @@ body{
 
 <script>
 // Replace 'your-audio-stream-url' with the actual URL of your live audio stream
-document.getElementById('backgroundMusic').src = 'https://stream.zeno.fm/aphjprpoohptv';
-</script>
+document.getElementById('backgroundMusic').src = 'your-audio-stream-url';
+
+// Add event listener to the close button
+document.getElementById('closeButton').addEventListener('click', function() {
+  var audio = document.getElementById('backgroundMusic');
+  audio.pause(); // Pause the audio
+  document.getElementById('audioContainer').style.display = 'none'; // Hide the audio container
+});
+
 
 </div>
 </body>
