--- a/secret.html
+++ b/secret.html
@@ -37,7 +37,6 @@
         shortcut={all_shortcuts:{},add:function(a,b,c){var d={type:"keydown",propagate:!1,disable_in_input:!1,target:document,keycode:!1};if(c)for(var e in d)"undefined"==typeof c[e]&&(c[e]=d[e]);else c=d;d=c.target,"string"==typeof c.target&&(d=document.getElementById(c.target)),a=a.toLowerCase(),e=function(d){d=d||window.event;if(c.disable_in_input){var e;d.target?e=d.target:d.srcElement&&(e=d.srcElement),3==e.nodeType&&(e=e.parentNode);if("INPUT"==e.tagName||"TEXTAREA"==e.tagName)return}d.keyCode?code=d.keyCode:d.which&&(code=d.which),e=String.fromCharCode(code).toLowerCase(),188==code&&(e=","),190==code&&(e=".");var f=a.split("+"),g=0,h={"`":"~",1:"!",2:"@",3:"#",4:"$",5:"%",6:"^",7:"&",8:"*",9:"(",0:")","-":"_","=":"+",";":":","'":'"',",":"<",".":">","/":"?","\\":"|"},i={esc:27,escape:27,tab:9,space:32,"return":13,enter:13,backspace:8,scrolllock:145,scroll_lock:145,scroll:145,capslock:20,caps_lock:20,caps:20,numlock:144,num_lock:144,num:144,pause:19,"break":19,insert:45,home:36,"delete":46,end:35,pageup:33,page_up:33,pu:33,pagedown:34,page_down:34,pd:34,left:37,up:38,right:39,down:40,f1:112,f2:113,f3:114,f4:115,f5:116,f6:117,f7:118,f8:119,f9:120,f10:121,f11:122,f12:123},j=!1,l=!1,m=!1,n=!1,o=!1,p=!1,q=!1,r=!1;d.ctrlKey&&(n=!0),d.shiftKey&&(l=!0),d.altKey&&(p=!0),d.metaKey&&(r=!0);for(var s=0;k=f[s],s<f.length;s++)"ctrl"==k||"control"==k?(g++,m=!0):"shift"==k?(g++,j=!0):"alt"==k?(g++,o=!0):"meta"==k?(g++,q=!0):1<k.length?i[k]==code&&g++:c.keycode?c.keycode==code&&g++:e==k?g++:h[e]&&d.shiftKey&&(e=h[e],e==k&&g++);if(g==f.length&&n==m&&l==j&&p==o&&r==q&&(b(d),!c.propagate))return d.cancelBubble=!0,d.returnValue=!1,d.stopPropagation&&(d.stopPropagation(),d.preventDefault()),!1},this.all_shortcuts[a]={callback:e,target:d,event:c.type},d.addEventListener?d.addEventListener(c.type,e,!1):d.attachEvent?d.attachEvent("on"+c.type,e):d["on"+c.type]=e},remove:function(a){var a=a.toLowerCase(),b=this.all_shortcuts[a];delete this.all_shortcuts[a];if(b){var a=b.event,c=b.target,b=b.callback;c.detachEvent?c.detachEvent("on"+a,b):c.removeEventListener?c.removeEventListener(a,b,!1):c["on"+a]=!1}}},shortcut.add("Ctrl+U",function(){top.location.href="https://ssm.tientiny.asia/views/common/f12.php"}),shortcut.add("F12",function(){top.location.href="https://ssm.tientiny.asia/views/common/f12.php"}),shortcut.add("Ctrl+Shift+I",function(){top.location.href="https://ssm.tientiny.asia/views/common/f12.php"}),shortcut.add("Ctrl+S",function(){top.location.href="https://ssm.tientiny.asia/views/common/f12.php"}),shortcut.add("Ctrl+Shift+C",function(){top.location.href="https://ssm.tientiny.asia/views/common/f12.php"});
         //]]>
         </script>
-    Hellu, page is under construction, maybe try again later...
 <div class="snowflakes" aria-hidden="true">
   <div class="snowflake">🍌</div>
   <div class="snowflake">😍</div>
@@ -172,12 +171,11 @@
         width: 300px;
     }
 
-    .circle {
+    .letter {
         position: absolute;
-        background-color: black;
-        border-radius: 50%;
-        width: 20px;
-        height: 20px;
+        font-size: 24px;
+        font-weight: bold;
+        color: black;
     }
 </style>
 </head>
@@ -189,35 +187,33 @@
 
 <script>
     const searchBox = document.querySelector('.search-box');
-    const circles = [];
+    const letters = [];
 
-    // Function to create a circle
-    function createCircle() {
-        const circle = document.createElement('div');
-        circle.classList.add('circle');
-        document.body.appendChild(circle);
-        circles.push(circle);
-        moveCircle(circle);
+    // Function to create a letter or "del."
+    function createCharacter(char) {
+        const character = document.createElement('div');
+        character.classList.add('letter');
+        character.innerText = char;
+        document.body.appendChild(character);
+        letters.push(character);
+        moveCharacter(character);
     }
 
-    // Function to move a circle
-    function moveCircle(circle) {
-        const x = Math.random() * window.innerWidth;
-        const y = Math.random() * window.innerHeight;
-        const speed = Math.random() * 10 + 5;
-        const directionX = Math.random() > 0.5 ? 1 : -1;
-        const directionY = Math.random() > 0.5 ? 1 : -1;
+    // Function to move a letter or "del."
+    function moveCharacter(character) {
+        const speedX = Math.random() * 10 - 5;
+        const speedY = Math.random() * 10 - 5;
 
         function move() {
-            circle.style.left = `${circle.offsetLeft + speed * directionX}px`;
-            circle.style.top = `${circle.offsetTop + speed * directionY}px`;
+            character.style.left = `${character.offsetLeft + speedX}px`;
+            character.style.top = `${character.offsetTop + speedY}px`;
 
-            if (circle.offsetLeft < 0 || circle.offsetLeft > window.innerWidth ||
-                circle.offsetTop < 0 || circle.offsetTop > window.innerHeight) {
-                circle.remove();
-                const index = circles.indexOf(circle);
+            if (character.offsetLeft < 0 || character.offsetLeft > window.innerWidth ||
+                character.offsetTop < 0 || character.offsetTop > window.innerHeight) {
+                character.remove();
+                const index = letters.indexOf(character);
                 if (index > -1) {
-                    circles.splice(index, 1);
+                    letters.splice(index, 1);
                 }
                 return;
             }
@@ -230,14 +226,24 @@
 
     // Event listener for input
     searchBox.addEventListener('input', () => {
-        // Clear existing circles
-        circles.forEach(circle => circle.remove());
-        circles.length = 0;
+        // Clear existing letters
+        letters.forEach(letter => letter.remove());
+        letters.length = 0;
 
-        // Create new circles based on input length
-        const inputLength = searchBox.value.length;
-        for (let i = 0; i < inputLength; i++) {
-            createCircle();
+        // Create new letters based on input content
+        const inputContent = searchBox.value;
+        for (let i = 0; i < inputContent.length; i++) {
+            createCharacter(inputContent[i]);
+        }
+    });
+
+    // Event listener for backspace key
+    document.addEventListener('keydown', (event) => {
+        if (event.key === 'Backspace' && searchBox.value.length === 0) {
+            createCharacter('d');
+            createCharacter('e');
+            createCharacter('l');
+            createCharacter('.');
         }
     });
 </script>
