--- a/projects/index.html
+++ b/projects/index.html
@@ -8,12 +8,15 @@
   <body>
     <div class="frame">
       <div class="div">
-        <button class="home-button">Home</button>
+        <button class="home-button">Home
           <button class="home-button" onclick="window.location.href='http://mrlam.us.to';">
-        <div class="contact-button">Contact</div>
+          </button>
+        <div class="contact-button">Contact
           <div class="contact-button" onclick="window.location.href='http://mrlam.us.to/contact';">
-        <div class="projects-button">Projects</div>
+          </div>
+        <div class="projects-button">Projects
           <div class="contact-button" onclick="window.location.href='http://mrlam.us.to/projects';">
+          </div>
         <div class="projects">
           <div class="overlap-group">
             <div class="text-wrapper">Projects</div>
