--- a/projects/index.html
+++ b/projects/index.html
@@ -9,13 +9,13 @@
     <div class="frame">
       <div class="div">
         <button class="home-button">Home
-          <button class="home-button" onclick="window.location.href='http://mrlam.us.to';">
+          <button onclick="window.location.href='http://mrlam.us.to';">
           </button></button>
         <div class="contact-button">Contact
-          <div class="contact-button" onclick="window.location.href='http://mrlam.us.to/contact';">
+          <div onclick="window.location.href='http://mrlam.us.to/contact';">
           </div></div>
         <div class="projects-button">Projects
-          <div class="contact-button" onclick="window.location.href='http://mrlam.us.to/projects';">
+          <div onclick="window.location.href='http://mrlam.us.to/projects';">
           </div></div>
         <div class="projects">
           <div class="overlap-group">
