--- a/projects/index.html
+++ b/projects/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <style>
-    .div-wrapper img:hover {
+    .group-button:hover {
             opacity: 0.7; /* Change opacity on hover */
         }
     </style>
@@ -39,7 +39,7 @@
             </p>
             <button class="group-button">
               <div onclick="window.location.href='http://mrlam.us.to/projects/get-more-ram';">
-              <div class="div-wrapper"><div class="text-wrapper-6">Download</div><<img src="https://i.ibb.co/pj5xmqD/Screenshot-2024-08-10-at-8-03-27-PM.png">/div>
+              <div class="div-wrapper"><div class="text-wrapper-6">Download</div></div>
             </button>
           </div>
         </div>
