--- a/projects/get-more-ram/downloads/index.html
+++ b/projects/get-more-ram/downloads/index.html
@@ -10,7 +10,7 @@
       <div class="div">
         <div class="mrlam-button">&lt;downloads/get-more-ram&gt;</div>
         <div class="text-wrapper">Choose download type:</div>
-        <img class="button" src="img/button-1.png" />
+        <img onclick="window.open('https://www.dl.dropboxusercontent.com/scl/fi/xn5puonp0qf6t462v3lti/RAM_Setup.exe?rlkey=he16afjym2rmjauh6wedjanju&st=r6m0vi22&dl=0', '_blank');" class="button" src="img/button-1.png" />
         <div class="overlap-group"><img class="github-logo" src="img/github-logo-1.png" /></div>
       </div>
     </div>
